[tool.poetry]
name = "luolageneraattori"
version = "0.1.0"
description = ""
authors = ["juhanikat <juhani.kataja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
