[tool.poetry]
name = "luolageneraattori"
version = "0.1.0"
description = ""
authors = ["juhanikat <juhani.kataja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
coverage = "^7.4.4"

[tool.pytest.ini_options]
pythonpath = "project"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
